--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
