--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@tanstack/react-query": "^5.62.10",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "next": "15.1.2",
