--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/node": "22.10.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
